fix alignment of search bars

--- a/src/App.css
+++ b/src/App.css
@@ -24,5 +24,5 @@
 }
 
 .search {
-  align-self: flex-end;
+  align-self: baseline;
 }
